# battlesnails

./: .gitignore  ARCHITECTURE.md  ASSET_REVIEW.md  README.md  ROLLING_TODOS.md  WORKING_MEMORY.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js  vite.config.ts
docs/: README.md  specifications.md
docs/01-overview/: README.md
docs/02-architecture/: README.md
docs/03-gameplay/: README.md
docs/04-debugging/: README.md
docs/05-implementation/: README.md
scripts/: measure-asset-collision-jaccard.ts  print-explorer-map.ts  probe-controls.mjs  profile-arena.ts  profile-browser-arena.ts  render-snail-music.ts  screenshot-asset-studio.ts  screenshot-asset-suite.ts
server/: MinimalWebSocketServer.mjs  MinimalWebSocketServer.ts  createLocalMultiplayerServer.mjs  createLocalMultiplayerServer.ts  index.mjs  index.ts
src/: Main.js  main.js  main.ts  style.css
src/audio/: AudioController.js  AudioController.ts  ProximityChat.ts  ProximityVoiceController.ts  SnailMusic.ts
src/game/: Game.js  (+26 more)
tests/: audio.test.ts  browser-performance-profile.test.ts  controls.test.mjs  controls.test.ts  damage-indicators.test.ts  explorer.test.mjs  explorer.test.ts  language.test.ts  network.test.mjs  network.test.ts  performance-profile.test.ts  proximity-chat.test.ts  server.test.mjs  server.test.ts  sim.test.mjs  sim.test.ts  simulator.test.mjs  simulator.test.ts  singleplayer-tuning.test.mjs  singleplayer-tuning.test.ts  terrain.test.mjs  terrain.test.ts  test-mode.test.mjs  test-mode.test.ts  world-prop-batch.test.ts
(+77 files in other folders)
