[project]
name = "battlesnails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joe Hakim", email = "joebhakim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
battlesnails = "battlesnails.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
